infra/k8s/apps/spa-mobile-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-mobile-app
  namespace: showcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-mobile-app
  template:
    metadata:
      labels:
        app: spa-mobile-app
    spec:
      containers:
        - name: spa-mobile-app
          image: quay.io/acaglio/spa-mobile-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
