infra/k8s/apps/spa-mobile-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-mobile-app
  namespace: showcase
spec:
  type: ClusterIP
  selector:
    app: spa-mobile-app
  ports:
    - name: http
      port: 80
      targetPort: 80
