infra/k8s/apps/spa-mobile-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spa-mobile-app
  namespace: showcase
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: spa-mobile-app
  port:
    targetPort: http
